--- a/myProject/src/index.html
+++ b/myProject/src/index.html
@@ -24,7 +24,22 @@
     <div class="product">
     <p><b style="color:red">Go to </b><a href="#"> Home Page</a></p>
     </div>
+    <div class="product">
+      <h3 class="product-title">Name</h3>
+      <p class="Description">Description</p>
+      <button (click)="clickHandler()">Click Me</button>
+    </div>
+
+    <div class="product">
+      <h3 class="product-title">Dog</h3>
+      <h3 class="product-title">Cat</h3>
+      <button (click)="clickHandler()">Click Me</button>
+    </div>
   </main>
+
+  <footer>
+    <p>&copy; 2023 Mój sklep internetowy. Wszelkie prawa zastrzeżone</p>
+  </footer>
 
   <app-root></app-root>
 </body>
