--- a/myProject/src/index.html
+++ b/myProject/src/index.html
@@ -31,8 +31,8 @@
     </div>
 
     <div class="product">
-      <h3 class="product-title">Dog</h3>
-      <h3 class="product-title">Cat</h3>
+      <h3 class="product-title">Kategoria</h3>
+      <h3 class="product-title">Szczegóły</h3>
       <button (click)="clickHandler()">Click Me</button>
     </div>
   </main>
