HTML główny modyfikacja, HTML components modyfik

--- a/myProject/src/index.html
+++ b/myProject/src/index.html
@@ -6,9 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">  
-<p>Nagłówek</p>
-<head>Nagłówek</head>
-<div class="head">My project</div>
+<div style="position:relative; background-color: rgb(107, 203, 77); font-size: 22px; border: solid 1px;" class="head" >My project</div>
 </head>
 
   <app-root></app-root>
